# termestra

./: LICENSE  Pipfile  README.rst  code_style.txt  pyproject.toml  termestra-script
termestra/: line_test.py  termestra.py
termestra/tmx_util/: app.py  gt_dbus.py  misc.py  tmux.py
